[package]
authors = ['Parami Devs <info@parami.io>']
description = 'Parami Dana Runtime.'
edition = '2018'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-runtime'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.parami-primitives]
default-features = false
path = '../primitives'

[dependencies.parami-ad]
default-features = false
path = '../pallets/ad'

[dependencies.parami-advertiser]
default-features = false
path = '../pallets/advertiser'

[dependencies.parami-airdrop]
default-features = false
path = '../pallets/airdrop'

[dependencies.parami-chainbridge]
default-features = false
path = '../pallets/chainbridge'

[dependencies.parami-xassets]
default-features = false
path = '../pallets/xassets'

[dependencies.parami-did]
default-features = false
path = '../pallets/did'

[dependencies.parami-linker]
default-features = false
path = '../pallets/linker'

[dependencies.parami-magic]
default-features = false
path = '../pallets/magic'

[dependencies.parami-nft]
default-features = false
path = '../pallets/nft'

[dependencies.parami-swap]
default-features = false
path = '../pallets/swap'

[dependencies.parami-tag]
default-features = false
path = '../pallets/tag'

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'
optional = true

[dependencies.frame-election-provider-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'
optional = true

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.hex-literal]
version = '0.3.1'
optional = true

[dependencies.orml-nft]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library.git'
rev = 'ee37b76a7a8cf159e6c41851942758746318bb84'

[dependencies.pallet-authority-discovery]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-authorship]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-assets]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-bounties]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-collective]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-contracts-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-democracy]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-election-provider-multi-phase]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-elections-phragmen]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-im-online]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-membership]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-mmr]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-multisig]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-offences]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-offences-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'
optional = true

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-recovery]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-session-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'
optional = true

[dependencies.pallet-staking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-staking-reward-curve]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-society]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-tips]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-treasury]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-utility]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.pallet-vesting]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.serde]
features = ['derive']
version = '1.0'
optional = true

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-consensus-babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-npos-elections]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[features]
default = ['std']

runtime-benchmarks = [
    'frame-benchmarking',
    'frame-election-provider-support/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-assets/runtime-benchmarks',
    # 'pallet-authority-discovery/runtime-benchmarks',
    # 'pallet-authorship/runtime-benchmarks',
    'pallet-babe/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-bounties/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    # 'pallet-contracts-primitives/runtime-benchmarks',
    # 'pallet-contracts-rpc-runtime-api/runtime-benchmarks',
    'pallet-contracts/runtime-benchmarks',
    'pallet-democracy/runtime-benchmarks',
    'pallet-election-provider-multi-phase/runtime-benchmarks',
    'pallet-elections-phragmen/runtime-benchmarks',
    'pallet-grandpa/runtime-benchmarks',
    'pallet-im-online/runtime-benchmarks',
    'pallet-membership/runtime-benchmarks',
    'pallet-mmr/runtime-benchmarks',
    'pallet-multisig/runtime-benchmarks',
    'pallet-offences-benchmarking',
    'pallet-offences/runtime-benchmarks',
    # 'pallet-randomness-collective-flip/runtime-benchmarks',
    # 'pallet-recovery/runtime-benchmarks',
    'pallet-scheduler/runtime-benchmarks',
    'pallet-session-benchmarking',
    # 'pallet-session/runtime-benchmarks',
    'pallet-society/runtime-benchmarks',
    # 'pallet-staking-reward-curve/runtime-benchmarks',
    'pallet-staking/runtime-benchmarks',
    # 'pallet-sudo/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-tips/runtime-benchmarks',
    # 'pallet-transaction-payment-rpc-runtime-api/runtime-benchmarks',
    # 'pallet-transaction-payment/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
    'pallet-utility/runtime-benchmarks',
    'pallet-vesting/runtime-benchmarks',
    'parami-ad/runtime-benchmarks',
    'parami-advertiser/runtime-benchmarks',
    'parami-airdrop/runtime-benchmarks',
    'parami-chainbridge/runtime-benchmarks',
    'parami-xassets/runtime-benchmarks',
    'parami-did/runtime-benchmarks',
    'parami-linker/runtime-benchmarks',
    'parami-magic/runtime-benchmarks',
    'parami-nft/runtime-benchmarks',
    'parami-swap/runtime-benchmarks',
    'parami-tag/runtime-benchmarks',
    'serde',
    'sp-runtime/runtime-benchmarks',
]

std = [
    'codec/std',
    'frame-election-provider-support/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'orml-nft/std',
    'pallet-assets/std',
    'pallet-authority-discovery/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-bounties/std',
    'pallet-collective/std',
    'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
    'pallet-democracy/std',
    'pallet-election-provider-multi-phase/std',
    'pallet-elections-phragmen/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-membership/std',
    'pallet-mmr/std',
    'pallet-multisig/std',
    'pallet-offences/std',
    'pallet-randomness-collective-flip/std',
    'pallet-recovery/std',
    'pallet-scheduler/std',
    'pallet-session/std',
    'pallet-society/std',
    'pallet-staking/std',
    # 'pallet-staking-reward-curve/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-tips/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-treasury/std',
    'pallet-utility/std',
    'pallet-vesting/std',
    'parami-ad/std',
    'parami-advertiser/std',
    'parami-airdrop/std',
    'parami-chainbridge/std',
    'parami-xassets/std',
    'parami-did/std',
    'parami-linker/std',
    'parami-magic/std',
    'parami-nft/std',
    'parami-primitives/std',
    'parami-swap/std',
    'parami-tag/std',
    'scale-info/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-npos-elections/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
