[package]
name = "parami-testing"
version = "2.0.0"
authors = ["Parami Devs <info@parami.io>"]
description = "Test utilities for Substrate node."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
log = "0.4.14"
tempfile = "3.1.0"
fs_extra = "1"
futures = "0.3.1"

pallet-balances = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-service = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", features = ["test-helpers", "db"] }
sc-client-db = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", features = ["kvdb-rocksdb", "parity-db"] }
sc-client-api = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-indices = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-keyring = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-io = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
frame-support = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-session = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-society = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-staking = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-executor = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", features = ["wasmtime"] }
sp-consensus = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", version = "2.0.1" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-api = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-inherents = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }

parami-executor = { version = "2.0.0", path = "../executor" }
parami-primitives = { version = "2.0.0", path = "../primitives" }
parami-runtime = { version = "2.0.0", path = "../runtime" }

[dev-dependencies]
criterion = "0.3.0"

sc-cli = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
