[package]
name = "parami-testing"
version = "2.0.0"
authors = ["Parami Devs <info@parami.io>"]
description = "Test utilities for Substrate node."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
log = "0.4.14"
tempfile = "3.1.0"
fs_extra = "1"
futures = "0.3.1"

pallet-balances = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
sc-service = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", features = ["test-helpers", "db"] }
sc-client-db = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", features = ["kvdb-rocksdb", "parity-db"] }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
pallet-contracts = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
pallet-grandpa = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
pallet-indices = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
sp-keyring = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
sp-core = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
sp-io = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
frame-support = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
pallet-session = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
pallet-society = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
sp-runtime = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
pallet-staking = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
sc-executor = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", features = ["wasmtime"] }
sp-consensus = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
frame-system = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
substrate-test-client = { git = "https://github.com/paritytech/substrate", version = "2.0.1" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
pallet-treasury = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
sp-api = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
sp-timestamp = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
sc-block-builder = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sp-inherents = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}
sp-blockchain = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09"}

parami-executor = { version = "2.0.0", path = "../executor" }
parami-primitives = { version = "2.0.0", path = "../primitives" }
parami-runtime = { version = "2.0.0", path = "../runtime" }

[dev-dependencies]
criterion = "0.3.0"

sc-cli = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
