[package]
authors = ['Parami Devs <info@parami.io>']
build = 'build.rs'
description = 'Parami Dana Node.'
edition = '2021'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-dana'
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.13'

[[bin]]
name = 'parami'
path = 'src/main.rs'

[features]
runtime-benchmarks = ['parami-dana-runtime/runtime-benchmarks']

[dependencies]
rand = '0.7'
serde = { version = '1.0', features = ['derive'] }
structopt = '0.3'

# RPC related Dependencies
jsonrpc-core = '18.0'

# Local Dependencies
parami-dana-runtime = { path = '../../runtimes/dana' }

parami-did-rpc = { path = '../../pallets/did/rpc' }
parami-linker = { path = '../../pallets/linker' }
parami-nft = { path = '../../pallets/nft' }
parami-swap-rpc = { path = '../../pallets/swap/rpc' }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

pallet-contracts-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-mmr-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-finality-grandpa-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-service = { git = 'https://github.com/paritytech/substrate', features = [
    'wasmtime',
], branch = 'polkadot-v0.9.13' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-tracing = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-authority-discovery = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
