[package]
authors = ['Parami Devs <info@parami.io>']
build = 'build.rs'
description = 'Parami Dana Node.'
edition = '2021'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-dana'
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.24'

[[bin]]
name = 'parami'
path = 'src/main.rs'

[features]
runtime-benchmarks = ['parami-dana-runtime/runtime-benchmarks']
cli = [ 'try-runtime-cli']
try-runtime = [
    "parami-dana-runtime/try-runtime",
    "try-runtime-cli",
]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

rand = '0.7'
serde = { version = '1.0.0', features = ['derive'] }
structopt = '0.3'

jsonrpsee = { version = "0.13.0", features = ["server"] }

# Local Dependencies
parami-dana-runtime = { path = '../../runtimes/dana' }

parami-did-rpc = { path = '../../pallets/did/rpc' }
parami-linker = { path = '../../pallets/linker' }
parami-nft = { path = '../../pallets/nft' }
parami-swap-rpc = { path = '../../pallets/swap/rpc' }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.24', optional = true }
try-runtime-cli = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.24', optional = true }

pallet-contracts-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-mmr-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-finality-grandpa-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-service = { git = 'https://github.com/paritytech/substrate', features = [
    'wasmtime',
], branch = 'polkadot-v0.9.24' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-tracing = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

# until issue#11691 fixed.(https://github.com/paritytech/substrate/issues/11691)
tracing-core = "=0.1.26"

## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-authority-discovery = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-keyring = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
