[package]
authors = ['Parami Devs <info@parami.io>']
build = 'build.rs'
description = 'Parami Parachain Node.'
edition = '2021'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-para'
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.24'

[[bin]]
name = 'parami-collator'
path = 'src/main.rs'

[features]
runtime-benchmarks = ['parami-para-runtime/runtime-benchmarks']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies]
derive_more = '0.99'
hex-literal = '0.3'
log = '0.4'
rand = '0.7'
serde = { version = '1.0.0', features = ['derive'] }
clap = { version = "3.1.18", features = ["derive"] }
jsonrpsee = { version = "0.13.0", features = ["server"] }

# Local Dependencies
parami-para-runtime = { path = '../../runtimes/para' }

parami-did-rpc = { path = '../../pallets/did/rpc' }
parami-linker = { path = '../../pallets/linker' }
parami-nft = { path = '../../pallets/nft' }
parami-swap-rpc = { path = '../../pallets/swap/rpc' }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.24', optional = true }
try-runtime-cli = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.24' }

pallet-contracts-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-mmr-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
substrate-prometheus-endpoint = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-network = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-service = { git = 'https://github.com/paritytech/substrate', features = [
    'wasmtime',
], branch = 'polkadot-v0.9.24' }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-tracing = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-authority-discovery = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }

# Polkadot dependencies
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.24' }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.24' }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.24' }
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.24' }
