[package]
authors = ["Parami Team <info@parami.io>"]
name = "auction-manager"
version = '2.0.0'
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

sp-runtime = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
# Used for the node's RPCs
primitives = { package = "parami-primitives", path = "../../primitives", default-features = false }

funty = { version = "=1.1.0", default-features = false }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
    'frame-support/std',
]