[package]
authors = ['Parami Devs <info@parami.io>']
description = 'AD3 Advertisement Pallet'
edition = '2018'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-ad'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.parami-advertiser]
default-features = false
path = '../advertiser'
optional = true

[dependencies.parami-did]
default-features = false
path = '../did'

[dependencies.parami-nft]
default-features = false
path = '../nft'
optional = true

[dependencies.parami-swap]
default-features = false
path = '../swap'
optional = true

[dependencies.parami-tag]
default-features = false
path = '../tag'
optional = true

[dependencies.parami-traits]
default-features = false
path = '../traits'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies]
serde = { version = '1.0', optional = true }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.rand]
default-features = false
features = ['small_rng']
version = '0.7.3'
optional = true

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dev-dependencies.pallet-assets]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dev-dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dev-dependencies.pallet-uniques]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[dev-dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.12'

[features]
default = ['std']

runtime-benchmarks = [
    'frame-benchmarking',
    'parami-advertiser',
    'parami-nft',
    'parami-swap',
    'parami-tag',
    'rand',
]

std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'parami-advertiser/std',
    'parami-nft/std',
    'parami-did/std',
    'parami-swap/std',
    'parami-tag/std',
    'parami-traits/std',
    'scale-info/std',
    'serde',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
]

try-runtime = ['frame-support/try-runtime']
